syntax = "proto3";
package tmq;

message CheckStatusRequest {
    string sessionId = 1;
}

message ToggleStatusRequest {
    string sessionId = 1;
    string state = 2;
}
message StatusResponse {
    bool success = 1;
    string state = 2;
}

service TakeoverService {
    rpc CheckStatus (CheckStatusRequest) returns (StatusResponse);
    rpc ToggleStatus (ToggleStatusRequest) returns (StatusResponse);
}